# verdict-core

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  README_claims_patch.py  SECURITY.md  benchmark_evidence.md  benchmark_output.md  docker-compose.yml  fix.py  fix_cli.py  fix_cli2.py  fix_cli3.py  fix_cli_funcs.py  fix_cli_hardcode.py  fix_testclient.py  pyproject.toml  quickstart.sh  run_test_grid.sh  uninstall.sh  universal-integration.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml  codeql.yml  lint.yml  pypi-publish.yml
.verdict/adaptive_state/: snapshot_v100_1784842326.json  snapshot_v101_1784842442.json  snapshot_v101_1784842521.json  snapshot_v101_1784842818.json  snapshot_v101_1784842907.json  snapshot_v101_1784843476.json  snapshot_v101_1784844154.json  snapshot_v101_1784844282.json  snapshot_v101_1784854710.json  snapshot_v101_1784854857.json  snapshot_v101_1784854933.json  snapshot_v101_1784855247.json  snapshot_v101_1784855311.json  snapshot_v101_1784855856.json  snapshot_v101_1784855960.json  snapshot_v101_1784856501.json  snapshot_v101_1784857718.json  snapshot_v101_1784858423.json  snapshot_v103_1784856501.json  snapshot_v12_1784823019.json  snapshot_v14_1784823019.json  snapshot_v15_1784823019.json  snapshot_v16_1784823233.json  snapshot_v17_1784823233.json  snapshot_v18_1784823233.json  snapshot_v19_1784823233.json  snapshot_v20_1784823233.json  snapshot_v21_1784823371.json  snapshot_v22_1784823371.json  snapshot_v23_1784823371.json  snapshot_v24_1784823371.json  snapshot_v25_1784823371.json  snapshot_v26_1784823409.json  snapshot_v27_1784823409.json  snapshot_v28_1784823409.json  snapshot_v29_1784823409.json  snapshot_v30_1784823409.json  snapshot_v31_1784823529.json  snapshot_v32_1784823529.json  snapshot_v33_1784823529.json  (+66 more)
benchmarks/: run_reproducible.py  test_throughput.py
benchmarks/fixtures/: reproducible.json
contracts/: index.ts
docs/: BENCHMARKS.md  DEMO.md  SECURITY_ASSURANCE.md  SPEC.md  TOOLING_STACK_DIGEST.md  architecture.md  contracts-migration.md  integration-guide.md  intelligence-adapter-protocol.md  release-checklists.md
docs/adr/: ADR-001-evidence-ledger.md  ADR-002-orchestrator-routing.md
docs/architecture/: ADR-EVIDENCE-LEDGER.md  ADR-ORCHESTRATOR-ROUTING.md
docs/archive/: audit-2026-07-13.md  handoff-july-2026.md  memory-source-index.md  plan-flagship-completion.md
docs/guides/: autonomous-development.md  local-development.md  omniroute-workers.md
docs/integrations/: cli-agents.md  cursor-vscode.md  gateways-proxies.md  mimo.md  omniroute-9router.md  openclaw.md  opencode.md
docs/operations/: ECOSYSTEM_PRODUCT_VISION.md  MEMORY_SOURCE_INDEX.md  PORTFOLIO_CONTINUATION_RUNBOOK.md
evidence/: approval_required-2026-07-23T21-44-44.json  approval_required-2026-07-23T21-51-08.json  approval_required-2026-07-23T21-52-04.json  approval_required-2026-07-23T22-02-10.json  approval_required-2026-07-23T22-03-23.json  approval_required-2026-07-23T22-04-35.json  approval_required-2026-07-23T22-05-31.json  approval_required-2026-07-24T00-59-20.json  approval_required-2026-07-24T01-01-46.json  approval_required-2026-07-24T01-03-03.json  approval_required-2026-07-24T01-08-16.json  approval_required-2026-07-24T01-18-25.json  approval_required-2026-07-24T01-20-10.json  approval_required-2026-07-24T01-29-10.json  approval_required-2026-07-24T02-01-18.json  cancellation-2026-07-23T21-44-44.json  cancellation-2026-07-23T21-51-08.json  cancellation-2026-07-23T21-52-04.json  cancellation-2026-07-23T22-02-10.json  cancellation-2026-07-23T22-03-23.json  cancellation-2026-07-23T22-04-35.json  cancellation-2026-07-23T22-05-31.json  cancellation-2026-07-24T00-59-20.json  cancellation-2026-07-24T01-01-46.json  cancellation-2026-07-24T01-03-03.json  cancellation-2026-07-24T01-08-16.json  cancellation-2026-07-24T01-18-25.json  cancellation-2026-07-24T01-20-10.json  cancellation-2026-07-24T01-29-10.json  cancellation-2026-07-24T02-01-18.json  happy_path-2026-07-23T21-44-44.json  happy_path-2026-07-23T21-51-08.json  happy_path-2026-07-23T21-52-04.json  happy_path-2026-07-23T22-02-10.json  happy_path-2026-07-23T22-03-23.json  happy_path-2026-07-23T22-04-35.json  happy_path-2026-07-23T22-05-31.json  happy_path-2026-07-24T00-59-20.json  happy_path-2026-07-24T01-01-46.json  happy_path-2026-07-24T01-03-03.json  (+125 more)
exports/: adversarial_review_feedback.md
llm_gate/: __init__.py  api.py  availability.py  availability_cache.py  benchmarking.py  catalog.py  classifier.py  cli.py  contracts.py  dashboard.py  discovery.py  eligibility.py  escalation.py  gate.py  headroom.py  intelligence.py  logger.py  models.py  neural.py  omniroute.py  planner.py  provider_detection.py  proxy.py  router.py  security.py  suggestions.py
scripts/: ci_watch.sh  flagship_demo.py  verify_release_artifacts.py
tests/: test_adaptive_ranker.py  test_adaptive_state.py  test_availability.py  test_availability_adapter.py  test_availability_cache.py  test_benchmarking.py  test_cli_inprocess.py  test_cli_smoke.py  test_contracts.py  test_eligibility_gate.py  test_escalation.py  test_evidence.py  test_flagship_demo.py  test_gate_unit.py  test_intelligence_service.py  test_models.py  test_omniroute_http.py  test_planner.py  test_probes.py  test_provider_detection.py  test_proxy.py  test_public_helpers.py  test_ruflo_integration.py  test_ruflo_verification.py  test_security.py  test_suggestions.py  test_swarm.py  test_swarm_contracts.py  test_swarm_dispatcher_integration.py  test_swarm_observability.py  test_swarm_verification.py  test_vcr_fallback.py  test_workers.py
verdict/: __init__.py  adaptive_ranker.py  adaptive_state.py  api.py  availability.py  availability_cache.py  benchmarking.py  catalog.py  cli.py  contracts.py  dashboard.py  eligibility.py  escalation.py  evidence.py  gate.py  hivemind.py  intelligence.py  models.py  omniroute.py  planner.py  probes.py  provider_detection.py  proxy.py  ruflo_integration.py  ruflo_verification.py  swarm.py  swarm_contracts.py  swarm_dispatcher.py  swarm_observability.py  swarm_verification.py  workers.py
(+187 files in other folders)
