[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-gate"
version = "0.1.0"
description = "Route LLM tasks by criticality. Never send prod code to a cheap model."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Nicholas Carter"}]
keywords = ["llm", "routing", "ai", "cost-optimization", "openai", "anthropic", "multi-model"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[project.optional-dependencies]
server = ["fastapi>=0.109.0", "uvicorn>=0.27.0"]
ui = ["streamlit>=1.30", "plotly>=5.18", "pandas>=2.0"]
ci = ["rich>=13.0.0", "pyyaml>=6.0"]
all = ["streamlit", "plotly", "pandas", "rich", "pyyaml"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.8", "mypy>=1.13", "vcrpy>=6.0.0"]

[project.scripts]
llm-gate = "llm_gate.cli:main"

[project.urls]
Homepage = "https://github.com/mrnicholasbcarter-code/llm-gate"
Repository = "https://github.com/mrnicholasbcarter-code/llm-gate"
Issues = "https://github.com/mrnicholasbcarter-code/llm-gate/issues"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "B008"]
per-file-ignores = { "tests/*" = ["S101"] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
