[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
artifacts = ["schemas/contracts.v1.json"]

[project]
name = "llm-gate"
version = "0.1.0"
description = "Policy-safe, availability-aware routing and workflow orchestration for LLM tasks."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Nicholas Carter"}]
keywords = ["llm", "routing", "ai", "cost-optimization", "openai", "anthropic", "multi-model"]
dependencies = [
    "httpx>=0.25",
    "PyYAML>=6.0",
    "rich>=13.0.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[project.optional-dependencies]
server = ["fastapi>=0.109.0", "uvicorn>=0.27.0"]
ui = ["streamlit>=1.30", "plotly>=5.18", "pandas>=2.0"]
ci = []
all = ["streamlit", "plotly", "pandas"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-cov>=4.1", "ruff>=0.8", "mypy>=1.13", "vcrpy>=6.0.0", "types-PyYAML", "jsonschema>=4.23"]

[project.scripts]
llm-gate = "llm_gate.cli:main"

[project.urls]
Homepage = "https://github.com/mrnicholasbcarter-code/llm-gate"
Repository = "https://github.com/mrnicholasbcarter-code/llm-gate"
Issues = "https://github.com/mrnicholasbcarter-code/llm-gate/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "B008"]
per-file-ignores = { "tests/*" = ["S101"] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
