[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["verdict"]
artifacts = ["schemas/contracts.v1.json"]

[project]
name = "verdict-core"
version = "0.1.0"
description = "Policy-gated, availability-aware LLM routing control plane — deterministic safety floors, quantitative-trading-grade execution, closed-loop telemetry."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Nicholas Carter"}]
keywords = ["llm", "routing", "ai", "control-plane", "safety", "openai", "anthropic", "multi-model"]
dependencies = [
    "httpx>=0.25",
    "PyYAML>=6.0",
    "rich>=13.0.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[project.optional-dependencies]
server = ["fastapi>=0.109.0", "uvicorn>=0.27.0"]
dashboard = ["streamlit>=1.30", "plotly>=5.18", "pandas>=2.0"]
all = ["streamlit", "plotly", "pandas"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=4.1",
    "ruff>=0.8",
    "mypy>=1.13",
    "vcrpy>=6.0.0",
    "types-PyYAML",
    "jsonschema>=4.23",
    "code-review-graph>=2.3.7",
]

[project.scripts]
verdict = "verdict.cli:main"

[project.urls]
Homepage = "https://github.com/verdict/verdict-core"
Repository = "https://github.com/verdict/verdict-core"
Issues = "https://github.com/verdict/verdict-core/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "B008"]
per-file-ignores = { "tests/*" = ["S101"] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
exclude = [
    "docs/**/*.md",
    "exports/*.md",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict = true
# The Streamlit dashboard is an optional UI with third-party packages that do
# not ship compatible strict stubs. Core routing remains strictly checked;
# dashboard installation and import are covered by the complete install smoke.
exclude = ["^verdict/dashboard\\.py$"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["verdict"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.hatch.envs.default]
dependencies = ["verdict-core"]
